# poe_api

./: Cargo.toml  README.md  rustfmt.toml
examples/: auth.rs  simple.rs
src/: lib.rs
