[package]
name = "poe_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
derive_builder = "0.12.0"