[package]
name = "poe_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tiny_http = { version = "0.12", features = [] }
url = "2.4"
oauth2 = "4.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
derive_builder = "0.12"
derive_more = "0.99"
derivative = "2.2"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0.75"